# dijester

./: .Every Morning.dijester-history  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  example-config-epub.toml  example-config-md.toml  example-config.toml  go.mod  go.sum  readme.md
.github/workflows/: pr-checks.yml  release.yml
cmd/dijester/: main.go
docs/: architecture.md  configuring.md  security.md
pkg/config/: config.go  example.toml
pkg/constants/: constants.go
pkg/fetcher/: fetcher.go  fetcher_test.go  http.go  rate_limiter.go
pkg/formatter/: epub.go  epub_test.go  formatter.go  html_to_md.go  html_to_md_test.go  integration_test.go  markdown.go  markdown_test.go  register.go
pkg/models/: content.go  content_test.go
pkg/processor/: integration_test.go  processor.go  readability.go  readability_test.go  sanitizer.go
pkg/processor/tests/: testdata.go
pkg/source/: register.go  source.go  source_test.go
pkg/source/hackernews/: hackernews.go  hackernews_test.go
pkg/source/rss/: rss.go  rss_test.go
scripts/: e2e_test.sh
src/: config.rs  entry.rs  extensions.rs  feed.rs  main.rs
src/config/: config_parse_error.rs  export_config.rs  mod.rs  readability_config.rs
src/core/: entry.rs  feed.rs
src/export/: mod.rs  write_actions.rs
src/export/exporter/: html_exporter.rs  mod.rs
src/export/exporters/: epub.rs  markdown.rs  mod.rs  text.rs
src/export/flows/: compiled.rs  flat_files.rs  mod.rs
src/fetch/: filter.rs  mod.rs
tools/: tools.go
