[package]
name = "dijester"
version = "0.1.0"
edition = "2021"
authors = ["Shrikanth Upadhayaya <shrik450@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.11"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
reqwest = "0.11"
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
